--- a/references.bib
+++ b/references.bib
@@ -267,6 +267,17 @@
 	volume = {215},
 	number = {6},
 	pages = {1292-1339},
-	year = {1995},
+	year = {2011},
 	author = {Pierre Vogel},
+}
+
+@article{on-vassiliev-invariants-not-coming-from-semisimple-lie-algebras,
+	author = {Lieberum, Jens},
+	title = {On Vassiliev invariants not coming from semisimple Lie algebras
+	         },
+	journal = {Journal of Knot Theory and Its Ramifications},
+	volume = {08},
+	number = {05},
+	pages = {659-666},
+	year = {1999},
 }
